@@ -1,121 +1,66 @@
 /**
- * Copyright (c) 2015 Bosch Software Innovations GmbH and others.
+ * Copyright (c) 2015 Bosch Software Innovations GmbH and others
  *
- * All rights reserved. This program and the accompanying materials
- * are made available under the terms of the Eclipse Public License v1.0
- * which accompanies this distribution, and is available at
- * http://www.eclipse.org/legal/epl-v10.html
+ * This program and the accompanying materials are made
+ * available under the terms of the Eclipse Public License 2.0
+ * which is available at https://www.eclipse.org/legal/epl-2.0/
+ *
+ * SPDX-License-Identifier: EPL-2.0
  */
 package org.eclipse.hawkbit.repository;
 
 import java.util.AbstractMap.SimpleImmutableEntry;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map.Entry;
 import java.util.Optional;
 
+import lombok.Getter;
+
 /**
  * Describing the fields of the DistributionSet model which can be used in the
  * REST API e.g. for sorting etc.
- *
- *
- *
- *
  */
-public enum DistributionSetFields implements FieldNameProvider {
-    /**
-     * The name field.
-     */
-    NAME("name"),
-    /**
-     * The description field.
-     */
-    DESCRIPTION("description"),
-    /**
-     * The createdAt field.
-     */
-    CREATEDAT("createdAt"),
-    /**
-     * The lastModifiedAt field.
-     */
-    LASTMODIFIEDAT("lastModifiedAt"),
-    /**
-     * The version field.
-     */
-    VERSION("version"),
-    /**
-     * The complete field.
-     */
-    COMPLETE("complete"),
-    /**
-     * The id field.
-     */
+@Getter
+public enum DistributionSetFields implements RsqlQueryField {
+
     ID("id"),
-    /**
-     * The module field.
-     */
-    MODULE("modules", SoftwareModuleFields.ID.getFieldName(), SoftwareModuleFields.NAME.getFieldName()),
-    /**
-     * The tags field.
-     */
-    TAG("tags.name"),
-    /**
-     * The sw type key field.
-     */
-    TYPE("type.key"),
-    /**
-     * The metadata.
-     */
+    TYPE("type", "key"),
+    NAME("name"),
+    DESCRIPTION("description"),
+    CREATEDAT("createdAt"),
+    LASTMODIFIEDAT("lastModifiedAt"),
+    VERSION("version"),
+    COMPLETE("complete"),
+    MODULE("modules", SoftwareModuleFields.ID.getJpaEntityFieldName(), SoftwareModuleFields.NAME.getJpaEntityFieldName()),
+    TAG("tags", "name"),
     METADATA("metadata", new SimpleImmutableEntry<>("key", "value")),
-    /**
-     * The valid field.
-     */
     VALID("valid");
 
-    private final String fieldName;
-    private boolean mapField;
-    private Entry<String, String> subEntityMapTuple;
-
+    private final String jpaEntityFieldName;
     private final List<String> subEntityAttributes;
+    private final Entry<String, String> subEntityMapTuple;
 
-    private DistributionSetFields(final String fieldName) {
-        this(fieldName, false, null, Collections.emptyList());
+    DistributionSetFields(final String jpaEntityFieldName) {
+        this(jpaEntityFieldName, Collections.emptyList(), null);
     }
 
-    private DistributionSetFields(final String fieldName, final String... subEntityAttributes) {
-        this(fieldName, false, null, Arrays.asList(subEntityAttributes));
+    DistributionSetFields(final String jpaEntityFieldName, final String... subEntityAttributes) {
+        this(jpaEntityFieldName, List.of(subEntityAttributes), null);
     }
 
-    private DistributionSetFields(final String fieldName, final Entry<String, String> subEntityMapTuple) {
-        this(fieldName, true, subEntityMapTuple, Collections.emptyList());
+    DistributionSetFields(final String jpaEntityFieldName, final Entry<String, String> subEntityMapTuple) {
+        this(jpaEntityFieldName, Collections.emptyList(), subEntityMapTuple);
     }
 
-    private DistributionSetFields(final String fieldName, final boolean mapField,
-            final Entry<String, String> subEntityMapTuple, List<String> subEntityAttributes) {
-        this.fieldName = fieldName;
-        this.mapField = mapField;
+    DistributionSetFields(final String jpaEntityFieldName, List<String> subEntityAttributes, final Entry<String, String> subEntityMapTuple) {
+        this.jpaEntityFieldName = jpaEntityFieldName;
         this.subEntityMapTuple = subEntityMapTuple;
         this.subEntityAttributes = subEntityAttributes;
     }
 
     @Override
-    public List<String> getSubEntityAttributes() {
-        return Collections.unmodifiableList(subEntityAttributes);
-    }
-
-    @Override
     public Optional<Entry<String, String>> getSubEntityMapTuple() {
         return Optional.ofNullable(subEntityMapTuple);
-    }
-
-    @Override
-    public boolean isMap() {
-        return mapField;
-    }
-
-    @Override
-    public String getFieldName() {
-        return fieldName;
     }
 }
