@@ -1,10 +1,11 @@
 /**
- * Copyright (c) 2015 Bosch Software Innovations GmbH and others.
+ * Copyright (c) 2015 Bosch Software Innovations GmbH and others
  *
- * All rights reserved. This program and the accompanying materials
- * are made available under the terms of the Eclipse Public License v1.0
- * which accompanies this distribution, and is available at
- * http://www.eclipse.org/legal/epl-v10.html
+ * This program and the accompanying materials are made
+ * available under the terms of the Eclipse Public License 2.0
+ * which is available at https://www.eclipse.org/legal/epl-2.0/
+ *
+ * SPDX-License-Identifier: EPL-2.0
  */
 package org.eclipse.hawkbit.integration;
 
@@ -29,6 +30,9 @@ import java.util.UUID;
 import java.util.concurrent.Callable;
 import java.util.stream.Collectors;
 
+import io.qameta.allure.Description;
+import io.qameta.allure.Feature;
+import io.qameta.allure.Story;
 import org.eclipse.hawkbit.dmf.amqp.api.EventTopic;
 import org.eclipse.hawkbit.dmf.amqp.api.MessageHeaderKey;
 import org.eclipse.hawkbit.dmf.json.model.DmfActionRequest;
@@ -50,6 +54,7 @@ import org.eclipse.hawkbit.repository.event.remote.TargetPollEvent;
 import org.eclipse.hawkbit.repository.event.remote.entity.ActionCreatedEvent;
 import org.eclipse.hawkbit.repository.event.remote.entity.ActionUpdatedEvent;
 import org.eclipse.hawkbit.repository.event.remote.entity.DistributionSetCreatedEvent;
+import org.eclipse.hawkbit.repository.event.remote.entity.DistributionSetUpdatedEvent;
 import org.eclipse.hawkbit.repository.event.remote.entity.RolloutCreatedEvent;
 import org.eclipse.hawkbit.repository.event.remote.entity.RolloutGroupCreatedEvent;
 import org.eclipse.hawkbit.repository.event.remote.entity.RolloutGroupUpdatedEvent;
@@ -71,32 +76,32 @@ import org.eclipse.hawkbit.repository.model.Target;
 import org.eclipse.hawkbit.repository.model.TargetUpdateStatus;
 import org.eclipse.hawkbit.repository.test.matcher.Expect;
 import org.eclipse.hawkbit.repository.test.matcher.ExpectEvents;
-import org.eclipse.hawkbit.repository.test.util.WithSpringAuthorityRule;
+import org.eclipse.hawkbit.repository.test.util.SecurityContextSwitch;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.EnumSource;
 import org.mockito.Mockito;
 import org.springframework.amqp.core.Message;
 
-import io.qameta.allure.Description;
-import io.qameta.allure.Feature;
-import io.qameta.allure.Story;
-
 @Feature("Component Tests - Device Management Federation API")
 @Story("Amqp Message Dispatcher Service")
-public class AmqpMessageDispatcherServiceIntegrationTest extends AbstractAmqpServiceIntegrationTest {
+class AmqpMessageDispatcherServiceIntegrationTest extends AbstractAmqpServiceIntegrationTest {
+
     private static final String TARGET_PREFIX = "Dmf_disp_";
 
     @Test
     @Description("Verify that a distribution assignment send a download and install message.")
-    @ExpectEvents({ @Expect(type = TargetCreatedEvent.class, count = 1),
+    @ExpectEvents({
+            @Expect(type = TargetCreatedEvent.class, count = 1),
             @Expect(type = TargetAssignDistributionSetEvent.class, count = 1),
             @Expect(type = ActionCreatedEvent.class, count = 1),
-            @Expect(type = SoftwareModuleCreatedEvent.class, count = 3),
-            @Expect(type = SoftwareModuleUpdatedEvent.class, count = 6),
             @Expect(type = DistributionSetCreatedEvent.class, count = 1),
-            @Expect(type = TargetUpdatedEvent.class, count = 1), @Expect(type = TargetPollEvent.class, count = 1) })
-    public void sendDownloadAndInstallStatus() {
+            @Expect(type = SoftwareModuleCreatedEvent.class, count = 3),
+            @Expect(type = DistributionSetUpdatedEvent.class, count = 1), // implicit lock
+            @Expect(type = SoftwareModuleUpdatedEvent.class, count = 9), // implicit lock
+            @Expect(type = TargetUpdatedEvent.class, count = 1),
+            @Expect(type = TargetPollEvent.class, count = 1) })
+    void sendDownloadAndInstallStatus() {
         final String controllerId = TARGET_PREFIX + "sendDownloadAndInstallStatus";
         registerTargetAndAssignDistributionSet(controllerId);
 
@@ -106,14 +111,17 @@ public class AmqpMessageDispatcherServiceIntegrationTest extends AbstractAmqpSer
 
     @Test
     @Description("Verify that a distribution assignment sends a download message with window configured but before maintenance window start time.")
-    @ExpectEvents({ @Expect(type = TargetCreatedEvent.class, count = 1),
+    @ExpectEvents({
+            @Expect(type = TargetCreatedEvent.class, count = 1),
             @Expect(type = TargetAssignDistributionSetEvent.class, count = 1),
             @Expect(type = ActionCreatedEvent.class, count = 1),
-            @Expect(type = SoftwareModuleCreatedEvent.class, count = 3),
-            @Expect(type = SoftwareModuleUpdatedEvent.class, count = 6),
             @Expect(type = DistributionSetCreatedEvent.class, count = 1),
-            @Expect(type = TargetUpdatedEvent.class, count = 1), @Expect(type = TargetPollEvent.class, count = 1) })
-    public void sendDownloadStatusBeforeMaintenanceWindowStartTime() {
+            @Expect(type = SoftwareModuleCreatedEvent.class, count = 3),
+            @Expect(type = DistributionSetUpdatedEvent.class, count = 1), // implicit lock
+            @Expect(type = SoftwareModuleUpdatedEvent.class, count = 9), // implicit lock
+            @Expect(type = TargetUpdatedEvent.class, count = 1),
+            @Expect(type = TargetPollEvent.class, count = 1) })
+    void sendDownloadStatusBeforeMaintenanceWindowStartTime() {
         final String controllerId = TARGET_PREFIX + "sendDownloadStatusBeforeWindowStartTime";
 
         registerAndAssertTargetWithExistingTenant(controllerId);
@@ -128,14 +136,17 @@ public class AmqpMessageDispatcherServiceIntegrationTest extends AbstractAmqpSer
 
     @Test
     @Description("Verify that a distribution assignment sends a download and install message with window configured and during maintenance window start time.")
-    @ExpectEvents({ @Expect(type = TargetCreatedEvent.class, count = 1),
+    @ExpectEvents({
+            @Expect(type = TargetCreatedEvent.class, count = 1),
             @Expect(type = TargetAssignDistributionSetEvent.class, count = 1),
             @Expect(type = ActionCreatedEvent.class, count = 1),
-            @Expect(type = SoftwareModuleCreatedEvent.class, count = 3),
-            @Expect(type = SoftwareModuleUpdatedEvent.class, count = 6),
             @Expect(type = DistributionSetCreatedEvent.class, count = 1),
-            @Expect(type = TargetUpdatedEvent.class, count = 1), @Expect(type = TargetPollEvent.class, count = 1) })
-    public void sendDownloadAndInstallStatusMessageDuringMaintenanceWindow() {
+            @Expect(type = SoftwareModuleCreatedEvent.class, count = 3),
+            @Expect(type = DistributionSetUpdatedEvent.class, count = 1), // implicit lock
+            @Expect(type = SoftwareModuleUpdatedEvent.class, count = 9), // implicit lock
+            @Expect(type = TargetUpdatedEvent.class, count = 1),
+            @Expect(type = TargetPollEvent.class, count = 1) })
+    void sendDownloadAndInstallStatusMessageDuringMaintenanceWindow() {
         final String controllerId = TARGET_PREFIX + "sendDAndIStatusMessageDuringWindow";
 
         registerAndAssertTargetWithExistingTenant(controllerId);
@@ -150,15 +161,19 @@ public class AmqpMessageDispatcherServiceIntegrationTest extends AbstractAmqpSer
 
     @Test
     @Description("Verify that a distribution assignment multiple times send cancel and assign events with right softwaremodules")
-    @ExpectEvents({ @Expect(type = TargetCreatedEvent.class, count = 1),
+    @ExpectEvents({
+            @Expect(type = TargetCreatedEvent.class, count = 1),
             @Expect(type = TargetAssignDistributionSetEvent.class, count = 2),
             @Expect(type = CancelTargetAssignmentEvent.class, count = 1),
-            @Expect(type = ActionCreatedEvent.class, count = 2), @Expect(type = ActionUpdatedEvent.class, count = 2),
-            @Expect(type = SoftwareModuleCreatedEvent.class, count = 6),
-            @Expect(type = SoftwareModuleUpdatedEvent.class, count = 12),
+            @Expect(type = ActionCreatedEvent.class, count = 2),
+            @Expect(type = ActionUpdatedEvent.class, count = 2),
             @Expect(type = DistributionSetCreatedEvent.class, count = 2),
-            @Expect(type = TargetUpdatedEvent.class, count = 2), @Expect(type = TargetPollEvent.class, count = 3) })
-    public void assignDistributionSetMultipleTimes() {
+            @Expect(type = SoftwareModuleCreatedEvent.class, count = 6),
+            @Expect(type = DistributionSetUpdatedEvent.class, count = 2), // implicit lock
+            @Expect(type = SoftwareModuleUpdatedEvent.class, count = 18), // implicit lock
+            @Expect(type = TargetUpdatedEvent.class, count = 2),
+            @Expect(type = TargetPollEvent.class, count = 3) })
+    void assignDistributionSetMultipleTimes() {
         final String controllerId = TARGET_PREFIX + "assignDistributionSetMultipleTimes";
 
         final DistributionSetAssignmentResult assignmentResult = registerTargetAndAssignDistributionSet(controllerId);
@@ -192,34 +207,39 @@ public class AmqpMessageDispatcherServiceIntegrationTest extends AbstractAmqpSer
 
     @Test
     @Description("If multi assignment is enabled multi-action messages are sent.")
-    @ExpectEvents({ @Expect(type = TargetCreatedEvent.class, count = 1),
+    @ExpectEvents({
+            @Expect(type = TargetCreatedEvent.class, count = 1),
             @Expect(type = MultiActionAssignEvent.class, count = 2),
             @Expect(type = TargetAssignDistributionSetEvent.class, count = 0),
             @Expect(type = CancelTargetAssignmentEvent.class, count = 0),
-            @Expect(type = ActionCreatedEvent.class, count = 2), @Expect(type = ActionUpdatedEvent.class, count = 0),
-            @Expect(type = SoftwareModuleCreatedEvent.class, count = 6),
+            @Expect(type = ActionCreatedEvent.class, count = 2),
+            @Expect(type = ActionUpdatedEvent.class, count = 0),
             @Expect(type = DistributionSetCreatedEvent.class, count = 2),
-            @Expect(type = TargetUpdatedEvent.class, count = 2), @Expect(type = TargetPollEvent.class, count = 1),
+            @Expect(type = SoftwareModuleCreatedEvent.class, count = 6),
+            @Expect(type = DistributionSetUpdatedEvent.class, count = 2), // implicit lock
+            @Expect(type = SoftwareModuleUpdatedEvent.class, count = 6), // implicit lock
+            @Expect(type = TargetUpdatedEvent.class, count = 2),
+            @Expect(type = TargetPollEvent.class, count = 1),
             @Expect(type = TenantConfigurationCreatedEvent.class, count = 1) })
-    public void assignMultipleDsInMultiAssignMode() {
+    void assignMultipleDsInMultiAssignMode() {
         enableMultiAssignments();
         final String controllerId = TARGET_PREFIX + "assignMultipleDsInMultiAssignMode";
         registerAndAssertTargetWithExistingTenant(controllerId);
 
         final Long actionId1 = assignNewDsToTarget(controllerId, 450);
-        final Entry<Long, EventTopic> action1Install = new SimpleEntry<>(actionId1, EventTopic.DOWNLOAD_AND_INSTALL);
+        final SimpleEntry<Long, EventTopic> action1Install = new SimpleEntry<>(actionId1, EventTopic.DOWNLOAD_AND_INSTALL);
         waitUntilEventMessagesAreDispatchedToTarget(EventTopic.MULTI_ACTION);
         assertLatestMultiActionMessage(controllerId, Collections.singletonList(action1Install));
 
         final Long actionId2 = assignNewDsToTarget(controllerId, 111);
-        final Entry<Long, EventTopic> action2Install = new SimpleEntry<>(actionId2, EventTopic.DOWNLOAD_AND_INSTALL);
+        final SimpleEntry<Long, EventTopic> action2Install = new SimpleEntry<>(actionId2, EventTopic.DOWNLOAD_AND_INSTALL);
         waitUntilEventMessagesAreDispatchedToTarget(EventTopic.MULTI_ACTION);
         assertLatestMultiActionMessage(controllerId, Arrays.asList(action1Install, action2Install));
     }
 
     @Test
     @Description("Verify payload of multi action messages.")
-    public void assertMultiActionMessagePayloads() {
+    void assertMultiActionMessagePayloads() {
         final int expectedWeightIfNotSet = 1000;
         final int weight1 = 600;
         final String controllerId = UUID.randomUUID().toString();
@@ -234,7 +254,7 @@ public class AmqpMessageDispatcherServiceIntegrationTest extends AbstractAmqpSer
                 .setActionType(ActionType.DOWNLOAD_ONLY).setWeight(weight1).build()).getAssignedEntity().get(0).getId();
         final Long cancelActionId = makeAssignment(
                 DeploymentManagement.deploymentRequest(controllerId, ds.getId()).setWeight(DEFAULT_TEST_WEIGHT).build())
-                        .getAssignedEntity().get(0).getId();
+                .getAssignedEntity().get(0).getId();
         // make sure the latest message in the queue is the one triggered by the
         // cancellation
         waitUntilEventMessagesAreDispatchedToTarget(EventTopic.DOWNLOAD_AND_INSTALL, EventTopic.MULTI_ACTION,
@@ -266,27 +286,25 @@ public class AmqpMessageDispatcherServiceIntegrationTest extends AbstractAmqpSer
                 controllerId);
     }
 
-    private List<DmfMultiActionElement> getLatestMultiActionMessages(final String expectedControllerId) {
-        final Message multiactionMessage = replyToListener.getLatestEventMessage(EventTopic.MULTI_ACTION);
-        assertThat(multiactionMessage.getMessageProperties().getHeaders().get(MessageHeaderKey.THING_ID))
-                .isEqualTo(expectedControllerId);
-        return ((DmfMultiActionRequest) getDmfClient().getMessageConverter().fromMessage(multiactionMessage))
-                .getElements();
-    }
-
     @Test
     @Description("Handle cancelation process of an action in multi assignment mode.")
-    @ExpectEvents({ @Expect(type = TargetCreatedEvent.class, count = 1),
+    @ExpectEvents({
+            @Expect(type = TargetCreatedEvent.class, count = 1),
+            @Expect(type = TargetUpdatedEvent.class, count = 2),
+            @Expect(type = TargetPollEvent.class, count = 1),
+            @Expect(type = TenantConfigurationCreatedEvent.class, count = 1),
             @Expect(type = MultiActionCancelEvent.class, count = 1),
             @Expect(type = MultiActionAssignEvent.class, count = 2),
             @Expect(type = TargetAssignDistributionSetEvent.class, count = 0),
             @Expect(type = CancelTargetAssignmentEvent.class, count = 0),
-            @Expect(type = ActionCreatedEvent.class, count = 2), @Expect(type = ActionUpdatedEvent.class, count = 2),
-            @Expect(type = SoftwareModuleCreatedEvent.class, count = 6),
+            @Expect(type = ActionCreatedEvent.class, count = 2),
+            @Expect(type = ActionUpdatedEvent.class, count = 2),
             @Expect(type = DistributionSetCreatedEvent.class, count = 2),
-            @Expect(type = TargetUpdatedEvent.class, count = 2), @Expect(type = TargetPollEvent.class, count = 1),
-            @Expect(type = TenantConfigurationCreatedEvent.class, count = 1) })
-    public void cancelActionInMultiAssignMode() {
+            @Expect(type = SoftwareModuleCreatedEvent.class, count = 6),
+            @Expect(type = DistributionSetUpdatedEvent.class, count = 2), // implicit lock
+            @Expect(type = SoftwareModuleUpdatedEvent.class, count = 6) // implicit lock
+    })
+    void cancelActionInMultiAssignMode() {
         enableMultiAssignments();
         final String controllerId = TARGET_PREFIX + "cancelActionInMultiAssignMode";
         registerAndAssertTargetWithExistingTenant(controllerId);
@@ -297,8 +315,8 @@ public class AmqpMessageDispatcherServiceIntegrationTest extends AbstractAmqpSer
         deploymentManagement.cancelAction(actionId1);
         waitUntilEventMessagesAreDispatchedToTarget(EventTopic.MULTI_ACTION);
 
-        final Entry<Long, EventTopic> action1Cancel = new SimpleEntry<>(actionId1, EventTopic.CANCEL_DOWNLOAD);
-        final Entry<Long, EventTopic> action2Install = new SimpleEntry<>(actionId2, EventTopic.DOWNLOAD_AND_INSTALL);
+        final SimpleEntry<Long, EventTopic> action1Cancel = new SimpleEntry<>(actionId1, EventTopic.CANCEL_DOWNLOAD);
+        final SimpleEntry<Long, EventTopic> action2Install = new SimpleEntry<>(actionId2, EventTopic.DOWNLOAD_AND_INSTALL);
 
         assertLatestMultiActionMessage(controllerId, Arrays.asList(action1Cancel, action2Install));
         updateActionViaDmfClient(controllerId, actionId1, DmfActionStatus.CANCELED);
@@ -309,24 +327,29 @@ public class AmqpMessageDispatcherServiceIntegrationTest extends AbstractAmqpSer
 
     @Test
     @Description("Handle finishing an action in multi assignment mode.")
-    @ExpectEvents({ @Expect(type = TargetCreatedEvent.class, count = 1),
+    @ExpectEvents({
+            @Expect(type = TargetCreatedEvent.class, count = 1),
             @Expect(type = MultiActionAssignEvent.class, count = 2),
             @Expect(type = TargetAttributesRequestedEvent.class, count = 1),
             @Expect(type = TargetAssignDistributionSetEvent.class, count = 0),
             @Expect(type = CancelTargetAssignmentEvent.class, count = 0),
-            @Expect(type = ActionCreatedEvent.class, count = 2), @Expect(type = ActionUpdatedEvent.class, count = 1),
-            @Expect(type = SoftwareModuleCreatedEvent.class, count = 6),
+            @Expect(type = ActionCreatedEvent.class, count = 2),
+            @Expect(type = ActionUpdatedEvent.class, count = 1),
             @Expect(type = DistributionSetCreatedEvent.class, count = 2),
-            @Expect(type = TargetUpdatedEvent.class, count = 3), @Expect(type = TargetPollEvent.class, count = 1),
+            @Expect(type = SoftwareModuleCreatedEvent.class, count = 6),
+            @Expect(type = DistributionSetUpdatedEvent.class, count = 2), // implicit lock
+            @Expect(type = SoftwareModuleUpdatedEvent.class, count = 6), // implicit lock
+            @Expect(type = TargetUpdatedEvent.class, count = 3),
+            @Expect(type = TargetPollEvent.class, count = 1),
             @Expect(type = TenantConfigurationCreatedEvent.class, count = 1) })
-    public void finishActionInMultiAssignMode() {
+    void finishActionInMultiAssignMode() {
         enableMultiAssignments();
         final String controllerId = TARGET_PREFIX + "finishActionInMultiAssignMode";
         registerAndAssertTargetWithExistingTenant(controllerId);
 
         final long actionId1 = assignNewDsToTarget(controllerId, 66);
         final long actionId2 = assignNewDsToTarget(controllerId, 767);
-        final Entry<Long, EventTopic> action2Install = new SimpleEntry<>(actionId2, EventTopic.DOWNLOAD_AND_INSTALL);
+        final SimpleEntry<Long, EventTopic> action2Install = new SimpleEntry<>(actionId2, EventTopic.DOWNLOAD_AND_INSTALL);
         waitUntilEventMessagesAreDispatchedToTarget(EventTopic.MULTI_ACTION, EventTopic.MULTI_ACTION);
 
         updateActionViaDmfClient(controllerId, actionId1, DmfActionStatus.FINISHED);
@@ -337,16 +360,21 @@ public class AmqpMessageDispatcherServiceIntegrationTest extends AbstractAmqpSer
 
     @Test
     @Description("If multi assignment is enabled assigning a DS multiple times creates a new action every time.")
-    @ExpectEvents({ @Expect(type = TargetCreatedEvent.class, count = 1),
+    @ExpectEvents({
+            @Expect(type = TargetCreatedEvent.class, count = 1),
             @Expect(type = MultiActionAssignEvent.class, count = 2),
             @Expect(type = TargetAssignDistributionSetEvent.class, count = 0),
             @Expect(type = CancelTargetAssignmentEvent.class, count = 0),
-            @Expect(type = ActionCreatedEvent.class, count = 2), @Expect(type = ActionUpdatedEvent.class, count = 0),
-            @Expect(type = SoftwareModuleCreatedEvent.class, count = 3),
+            @Expect(type = ActionCreatedEvent.class, count = 2),
+            @Expect(type = ActionUpdatedEvent.class, count = 0),
             @Expect(type = DistributionSetCreatedEvent.class, count = 1),
-            @Expect(type = TargetUpdatedEvent.class, count = 2), @Expect(type = TargetPollEvent.class, count = 1),
+            @Expect(type = SoftwareModuleCreatedEvent.class, count = 3),
+            @Expect(type = DistributionSetUpdatedEvent.class, count = 1), // implicit lock
+            @Expect(type = SoftwareModuleUpdatedEvent.class, count = 3), // implicit lock
+            @Expect(type = TargetUpdatedEvent.class, count = 2),
+            @Expect(type = TargetPollEvent.class, count = 1),
             @Expect(type = TenantConfigurationCreatedEvent.class, count = 1) })
-    public void assignDsMultipleTimesInMultiAssignMode() {
+    void assignDsMultipleTimesInMultiAssignMode() {
         enableMultiAssignments();
         final String controllerId = TARGET_PREFIX + "assignDsMultipleTimesInMultiAssignMode";
         registerAndAssertTargetWithExistingTenant(controllerId);
@@ -357,9 +385,335 @@ public class AmqpMessageDispatcherServiceIntegrationTest extends AbstractAmqpSer
         final Long actionId2 = getFirstAssignedAction(assignDistributionSet(dsId, controllerId, 775)).getId();
         waitUntilEventMessagesAreDispatchedToTarget(EventTopic.MULTI_ACTION);
 
-        final Entry<Long, EventTopic> action1Install = new SimpleEntry<>(actionId1, EventTopic.DOWNLOAD_AND_INSTALL);
-        final Entry<Long, EventTopic> action2Install = new SimpleEntry<>(actionId2, EventTopic.DOWNLOAD_AND_INSTALL);
+        final SimpleEntry<Long, EventTopic> action1Install = new SimpleEntry<>(actionId1, EventTopic.DOWNLOAD_AND_INSTALL);
+        final SimpleEntry<Long, EventTopic> action2Install = new SimpleEntry<>(actionId2, EventTopic.DOWNLOAD_AND_INSTALL);
         assertLatestMultiActionMessage(controllerId, Arrays.asList(action1Install, action2Install));
+    }
+
+    @Test
+    @Description("If multi assignment is enabled multiple rollouts with the same DS lead to multiple actions.")
+    @ExpectEvents({
+            @Expect(type = TargetCreatedEvent.class, count = 1),
+            @Expect(type = MultiActionAssignEvent.class, count = 2),
+            @Expect(type = TargetAssignDistributionSetEvent.class, count = 0),
+            @Expect(type = CancelTargetAssignmentEvent.class, count = 0),
+            @Expect(type = ActionCreatedEvent.class, count = 2),
+            @Expect(type = ActionUpdatedEvent.class, count = 2),
+            @Expect(type = DistributionSetCreatedEvent.class, count = 1),
+            @Expect(type = SoftwareModuleCreatedEvent.class, count = 3),
+            @Expect(type = DistributionSetUpdatedEvent.class, count = 1), // implicit lock
+            @Expect(type = SoftwareModuleUpdatedEvent.class, count = 3), // implicit lock
+            @Expect(type = TargetUpdatedEvent.class, count = 1),
+            @Expect(type = TargetPollEvent.class, count = 1),
+            @Expect(type = RolloutCreatedEvent.class, count = 2),
+            @Expect(type = RolloutUpdatedEvent.class, count = 6),
+            @Expect(type = RolloutGroupCreatedEvent.class, count = 2),
+            @Expect(type = RolloutGroupUpdatedEvent.class, count = 6),
+            @Expect(type = TenantConfigurationCreatedEvent.class, count = 1) })
+    void startRolloutsWithSameDsInMultiAssignMode() {
+        enableMultiAssignments();
+        final String controllerId = TARGET_PREFIX + "startRolloutsWithSameDsInMultiAssignMode";
+
+        registerAndAssertTargetWithExistingTenant(controllerId);
+        final DistributionSet ds = testdataFactory.createDistributionSet();
+        final Set<Long> smIds = getSoftwareModuleIds(ds);
+        final String filterQuery = "controllerId==" + controllerId;
+
+        createAndStartRollout(ds, filterQuery, 122);
+        waitUntilEventMessagesAreDispatchedToTarget(EventTopic.MULTI_ACTION);
+        assertLatestMultiActionMessageContainsInstallMessages(controllerId, Collections.singletonList(smIds));
+
+        createAndStartRollout(ds, filterQuery, 43);
+        waitUntilEventMessagesAreDispatchedToTarget(EventTopic.MULTI_ACTION);
+        assertLatestMultiActionMessageContainsInstallMessages(controllerId, Arrays.asList(smIds, smIds));
+    }
+
+    @Test
+    @Description("If multi assignment is enabled finishing one rollout does not affect other rollouts of the target.")
+    @ExpectEvents({
+            @Expect(type = TargetCreatedEvent.class, count = 1),
+            @Expect(type = MultiActionAssignEvent.class, count = 3),
+            @Expect(type = ActionCreatedEvent.class, count = 3),
+            @Expect(type = ActionUpdatedEvent.class, count = 5),
+            @Expect(type = DistributionSetCreatedEvent.class, count = 2),
+            @Expect(type = SoftwareModuleCreatedEvent.class, count = 6),
+            @Expect(type = DistributionSetUpdatedEvent.class, count = 2), // implicit lock
+            @Expect(type = SoftwareModuleUpdatedEvent.class, count = 6), // implicit lock
+            @Expect(type = TargetUpdatedEvent.class, count = 5),
+            @Expect(type = TargetPollEvent.class, count = 1),
+            @Expect(type = TargetAttributesRequestedEvent.class, count = 2),
+            @Expect(type = RolloutCreatedEvent.class, count = 3),
+            @Expect(type = RolloutUpdatedEvent.class, count = 9),
+            @Expect(type = RolloutGroupCreatedEvent.class, count = 3),
+            @Expect(type = RolloutGroupUpdatedEvent.class, count = 9),
+            @Expect(type = TenantConfigurationCreatedEvent.class, count = 1) })
+    void startMultipleRolloutsAndFinishInMultiAssignMode() {
+        enableMultiAssignments();
+        final String controllerId = TARGET_PREFIX + "startMultipleRolloutsAndFinishInMultiAssignMode";
+
+        registerAndAssertTargetWithExistingTenant(controllerId);
+        final String filterQuery = "controllerId==" + controllerId;
+        final DistributionSet ds1 = testdataFactory.createDistributionSet();
+        final Set<Long> smIds1 = getSoftwareModuleIds(ds1);
+        final DistributionSet ds2 = testdataFactory.createDistributionSet();
+        final Set<Long> smIds2 = getSoftwareModuleIds(ds2);
+
+        createAndStartRollout(ds1, filterQuery, 12);
+        createAndStartRollout(ds2, filterQuery, 45);
+        waitUntilEventMessagesAreDispatchedToTarget(EventTopic.MULTI_ACTION, EventTopic.MULTI_ACTION);
+        createAndStartRollout(ds1, filterQuery, 65);
+        waitUntilEventMessagesAreDispatchedToTarget(EventTopic.MULTI_ACTION);
+        assertLatestMultiActionMessageContainsInstallMessages(controllerId, Arrays.asList(smIds1, smIds2, smIds1));
+
+        final List<Long> installActions = getLatestMultiActionMessageActions(controllerId).stream()
+                .filter(entry -> entry.getValue().equals(EventTopic.DOWNLOAD_AND_INSTALL))
+                .map(Entry::getKey)
+                .toList();
+
+        updateActionViaDmfClient(controllerId, installActions.get(0), DmfActionStatus.FINISHED);
+        waitUntilEventMessagesAreDispatchedToTarget(EventTopic.REQUEST_ATTRIBUTES_UPDATE, EventTopic.MULTI_ACTION);
+        assertLatestMultiActionMessageContainsInstallMessages(controllerId, Arrays.asList(smIds2, smIds1));
+
+        updateActionViaDmfClient(controllerId, installActions.get(1), DmfActionStatus.FINISHED);
+        waitUntilEventMessagesAreDispatchedToTarget(EventTopic.REQUEST_ATTRIBUTES_UPDATE, EventTopic.MULTI_ACTION);
+        assertLatestMultiActionMessageContainsInstallMessages(controllerId, Collections.singletonList(smIds1));
+    }
+
+    @Test
+    @Description("Verify that a cancel assignment send a cancel message.")
+    @ExpectEvents({
+            @Expect(type = TargetCreatedEvent.class, count = 1),
+            @Expect(type = TargetAssignDistributionSetEvent.class, count = 1),
+            @Expect(type = CancelTargetAssignmentEvent.class, count = 1),
+            @Expect(type = ActionUpdatedEvent.class, count = 1),
+            @Expect(type = ActionCreatedEvent.class, count = 1),
+            @Expect(type = DistributionSetCreatedEvent.class, count = 1),
+            @Expect(type = SoftwareModuleCreatedEvent.class, count = 3),
+            @Expect(type = DistributionSetUpdatedEvent.class, count = 1), // implicit lock
+            @Expect(type = SoftwareModuleUpdatedEvent.class, count = 9), // implicit lock
+            @Expect(type = TargetUpdatedEvent.class, count = 1),
+            @Expect(type = TargetPollEvent.class, count = 2) })
+    void sendCancelStatus() {
+        final String controllerId = TARGET_PREFIX + "sendCancelStatus";
+
+        final Long actionId = registerTargetAndCancelActionId(controllerId);
+
+        createAndSendThingCreated(controllerId);
+        waitUntilTargetHasStatus(controllerId, TargetUpdateStatus.PENDING);
+        assertCancelActionMessage(actionId, controllerId);
+    }
+
+    @Test
+    @Description("Verify that when a target is deleted a target delete message is send.")
+    @ExpectEvents({
+            @Expect(type = TargetCreatedEvent.class, count = 1),
+            @Expect(type = TargetPollEvent.class, count = 1),
+            @Expect(type = TargetDeletedEvent.class, count = 1) })
+    void sendDeleteMessage() {
+        final String controllerId = TARGET_PREFIX + "sendDeleteMessage";
+
+        registerAndAssertTargetWithExistingTenant(controllerId);
+        targetManagement.deleteByControllerID(controllerId);
+        assertDeleteMessage(controllerId);
+    }
+
+    @Test
+    @Description("Verify that attribute update is requested after device successfully closed software update.")
+    @ExpectEvents({
+            @Expect(type = TargetCreatedEvent.class, count = 1),
+            @Expect(type = TargetAssignDistributionSetEvent.class, count = 2),
+            @Expect(type = ActionUpdatedEvent.class, count = 2),
+            @Expect(type = ActionCreatedEvent.class, count = 2),
+            @Expect(type = DistributionSetCreatedEvent.class, count = 2),
+            @Expect(type = SoftwareModuleCreatedEvent.class, count = 6),
+            @Expect(type = DistributionSetUpdatedEvent.class, count = 2), // implicit lock
+            @Expect(type = SoftwareModuleUpdatedEvent.class, count = 6), // implicit lock
+            @Expect(type = TargetUpdatedEvent.class, count = 4),
+            @Expect(type = TargetAttributesRequestedEvent.class, count = 1),
+            @Expect(type = TargetPollEvent.class, count = 1) })
+    void attributeRequestAfterSuccessfulUpdate() {
+        final String controllerId = TARGET_PREFIX + "attributeUpdateRequest";
+        registerAndAssertTargetWithExistingTenant(controllerId);
+
+        final long actionId1 = assignNewDsToTarget(controllerId);
+        updateActionViaDmfClient(controllerId, actionId1, DmfActionStatus.ERROR);
+        waitUntilTargetHasStatus(controllerId, TargetUpdateStatus.ERROR);
+        assertRequestAttributesUpdateMessageAbsent();
+
+        final long actionId2 = assignNewDsToTarget(controllerId);
+        updateActionViaDmfClient(controllerId, actionId2, DmfActionStatus.FINISHED);
+        waitUntilTargetHasStatus(controllerId, TargetUpdateStatus.IN_SYNC);
+        assertRequestAttributesUpdateMessage(controllerId);
+    }
+
+    @Test
+    @Description("Tests the download_only assignment: asserts correct dmf Message topic, and assigned DS")
+    @ExpectEvents({
+            @Expect(type = TargetCreatedEvent.class, count = 1),
+            @Expect(type = TargetAssignDistributionSetEvent.class, count = 1),
+            @Expect(type = ActionCreatedEvent.class, count = 1),
+            @Expect(type = DistributionSetCreatedEvent.class, count = 1),
+            @Expect(type = SoftwareModuleCreatedEvent.class, count = 3),
+            @Expect(type = DistributionSetUpdatedEvent.class, count = 1), // implicit lock
+            @Expect(type = SoftwareModuleUpdatedEvent.class, count = 9), // implicit lock
+            @Expect(type = TargetUpdatedEvent.class, count = 1),
+            @Expect(type = TargetPollEvent.class, count = 1) })
+    void downloadOnlyAssignmentSendsDownloadMessageTopic() {
+        final String controllerId = TARGET_PREFIX + "registerTargets_1";
+        final DistributionSet distributionSet = createTargetAndDistributionSetAndAssign(controllerId, DOWNLOAD_ONLY);
+
+        final Message message = assertReplyMessageHeader(EventTopic.DOWNLOAD, controllerId);
+        Mockito.verifyNoInteractions(getDeadletterListener());
+
+        assertThat(message).isNotNull();
+        final Map<String, Object> headers = message.getMessageProperties().getHeaders();
+        assertThat(headers)
+                .containsEntry("thingId", controllerId)
+                .containsEntry("type", EVENT.toString())
+                .containsEntry("topic", DOWNLOAD.toString());
+
+        final Optional<Target> target = controllerManagement.getByControllerId(controllerId);
+        assertThat(target).isPresent();
+
+        // verify the DS was assigned to the Target
+        final DistributionSet assignedDistributionSet = ((JpaTarget) target.get()).getAssignedDistributionSet();
+        assertThat(assignedDistributionSet.getId()).isEqualTo(distributionSet.getId());
+    }
+
+    @Test
+    @Description("Verify payload of batch assignment download and install message.")
+    void assertBatchAssignmentsDownloadAndInstall() {
+        assertBatchAssignmentsMessagePayload(BATCH_DOWNLOAD_AND_INSTALL);
+    }
+
+    @Test
+    @Description("Verify payload of batch assignments download only message.")
+    void assertBatchAssignmentsDownloadOnly() {
+        assertBatchAssignmentsMessagePayload(BATCH_DOWNLOAD);
+    }
+
+    protected void assertDmfBatchDownloadAndUpdateRequest(final DmfBatchDownloadAndUpdateRequest request,
+            final Set<SoftwareModule> softwareModules,
+            final List<String> controllerIds) {
+        assertSoftwareModules(softwareModules, request.getSoftwareModules());
+
+        final List<String> tokens = controllerIds.stream().map(controllerId -> {
+            final Optional<Target> target = controllerManagement.getByControllerId(controllerId);
+            assertThat(target).isPresent();
+            return target.get().getSecurityToken();
+        }).toList();
+
+        final List<DmfTarget> requestTargets = request.getTargets();
+
+        assertThat(requestTargets).hasSameSizeAs(controllerIds);
+        requestTargets.forEach(requestTarget -> {
+            assertThat(requestTarget).isNotNull();
+            assertThat(tokens.contains(requestTarget.getTargetSecurityToken()));
+        });
+    }
+
+    protected void assertEventMessageNotPresent(final EventTopic eventTopic) {
+        assertThat(replyToListener.getLatestEventMessage(eventTopic)).isNull();
+    }
+
+    @Test
+    @Description("Verify that batch and multi-assignments can't be activated at the same time.")
+    void assertBatchAndMultiAssignmentsNotCompatible() {
+        enableBatchAssignments();
+        assertThatExceptionOfType(TenantConfigurationValueChangeNotAllowedException.class)
+                .isThrownBy(() -> enableMultiAssignments());
+        disableBatchAssignments();
+
+        enableMultiAssignments();
+        assertThatExceptionOfType(TenantConfigurationValueChangeNotAllowedException.class)
+                .isThrownBy(() -> enableBatchAssignments());
+    }
+
+    @ParameterizedTest
+    @EnumSource(names = { "BATCH_DOWNLOAD_AND_INSTALL", "BATCH_DOWNLOAD" })
+    @Description("Verify payload of batch assignments.")
+    @ExpectEvents({
+            @Expect(type = TargetCreatedEvent.class, count = 3),
+            @Expect(type = TargetAssignDistributionSetEvent.class, count = 1),
+            @Expect(type = ActionCreatedEvent.class, count = 3),
+            @Expect(type = ActionUpdatedEvent.class, count = 0),
+            @Expect(type = DistributionSetCreatedEvent.class, count = 1),
+            @Expect(type = SoftwareModuleCreatedEvent.class, count = 3),
+            @Expect(type = DistributionSetUpdatedEvent.class, count = 1), // implicit lock
+            @Expect(type = SoftwareModuleUpdatedEvent.class, count = 9), // implicit lock
+            @Expect(type = TargetUpdatedEvent.class, count = 3),
+            @Expect(type = TargetPollEvent.class, count = 3),
+            @Expect(type = TenantConfigurationCreatedEvent.class, count = 1) })
+    void assertBatchAssignmentsMessagePayload(final EventTopic topic) {
+        enableBatchAssignments();
+
+        final List<String> targets = Arrays.asList("batchCtrlID1", "batchCtrlID2", "batchCtrlID3");
+        for (int i = 0; i < targets.size(); i++) {
+            registerAndAssertTargetWithExistingTenant(targets.get(i), i + 1);
+        }
+
+        final DistributionSet ds = testdataFactory.createDistributionSet();
+        testdataFactory.addSoftwareModuleMetadata(ds);
+
+        assignDistributionSet(ds.getId(), targets, topic == BATCH_DOWNLOAD ? DOWNLOAD_ONLY : FORCED);
+
+        waitUntilEventMessagesAreDispatchedToTarget(topic);
+
+        final Message message = replyToListener.getLatestEventMessage(topic);
+        final Map<String, Object> headers = message.getMessageProperties().getHeaders();
+        assertThat(headers)
+                .containsEntry("type", EVENT.toString())
+                .containsEntry("topic", topic.toString());
+
+        final DmfBatchDownloadAndUpdateRequest batchRequest = (DmfBatchDownloadAndUpdateRequest) getDmfClient()
+                .getMessageConverter().fromMessage(message);
+
+        assertThat(batchRequest).isExactlyInstanceOf(DmfBatchDownloadAndUpdateRequest.class);
+        assertDmfBatchDownloadAndUpdateRequest(batchRequest, ds.getModules(), targets);
+    }
+
+    @Test
+    @Description("Verify that a distribution assignment send a confirm message.")
+    @ExpectEvents({
+            @Expect(type = TargetCreatedEvent.class, count = 1),
+            @Expect(type = TargetAssignDistributionSetEvent.class, count = 1),
+            @Expect(type = ActionCreatedEvent.class, count = 1),
+            @Expect(type = DistributionSetCreatedEvent.class, count = 1),
+            @Expect(type = SoftwareModuleCreatedEvent.class, count = 3),
+            @Expect(type = DistributionSetUpdatedEvent.class, count = 1), // implicit lock
+            @Expect(type = SoftwareModuleUpdatedEvent.class, count = 9), // implicit lock
+            @Expect(type = TargetUpdatedEvent.class, count = 1),
+            @Expect(type = TargetPollEvent.class, count = 1),
+            @Expect(type = TenantConfigurationCreatedEvent.class, count = 1) })
+    void sendConfirmStatus() {
+        final String controllerId = TARGET_PREFIX + "sendConfirmStatus";
+        enableConfirmationFlow();
+        registerTargetAndAssignDistributionSet(controllerId);
+
+        waitUntilTargetHasStatus(controllerId, TargetUpdateStatus.PENDING);
+        assertConfirmMessage(getDistributionSet().getModules(), controllerId);
+        assertEventMessageNotPresent(EventTopic.DOWNLOAD_AND_INSTALL);
+    }
+
+    private static Set<Long> getSmIds(final DmfDownloadAndUpdateRequest request) {
+        return request.getSoftwareModules().stream().map(DmfSoftwareModule::getModuleId).collect(Collectors.toSet());
+    }
+
+    private static List<DmfDownloadAndUpdateRequest> getDownloadAndUpdateRequests(final DmfMultiActionRequest request) {
+        return request.getElements().stream()
+                .filter(AmqpMessageDispatcherServiceIntegrationTest::isDownloadAndUpdateRequest)
+                .map(multiAction -> (DmfDownloadAndUpdateRequest) multiAction.getAction()).toList();
+    }
+
+    private static boolean isDownloadAndUpdateRequest(final DmfMultiActionElement multiActionElement) {
+        return multiActionElement.getTopic().equals(EventTopic.DOWNLOAD)
+                || multiActionElement.getTopic().equals(EventTopic.DOWNLOAD_AND_INSTALL);
+    }
+
+    private List<DmfMultiActionElement> getLatestMultiActionMessages(final String expectedControllerId) {
+        final Message multiactionMessage = replyToListener.getLatestEventMessage(EventTopic.MULTI_ACTION);
+        assertThat(multiactionMessage.getMessageProperties().getHeaders()).containsEntry(MessageHeaderKey.THING_ID, expectedControllerId);
+        return ((DmfMultiActionRequest) getDmfClient().getMessageConverter().fromMessage(multiactionMessage)).getElements();
     }
 
     private void updateActionViaDmfClient(final String controllerId, final long actionId,
@@ -380,82 +734,6 @@ public class AmqpMessageDispatcherServiceIntegrationTest extends AbstractAmqpSer
         return actionId;
     }
 
-    @Test
-    @Description("If multi assignment is enabled multiple rollouts with the same DS lead to multiple actions.")
-    @ExpectEvents({ @Expect(type = TargetCreatedEvent.class, count = 1),
-            @Expect(type = MultiActionAssignEvent.class, count = 2),
-            @Expect(type = TargetAssignDistributionSetEvent.class, count = 0),
-            @Expect(type = CancelTargetAssignmentEvent.class, count = 0),
-            @Expect(type = ActionCreatedEvent.class, count = 2), @Expect(type = ActionUpdatedEvent.class, count = 2),
-            @Expect(type = SoftwareModuleCreatedEvent.class, count = 3),
-            @Expect(type = DistributionSetCreatedEvent.class, count = 1),
-            @Expect(type = TargetUpdatedEvent.class, count = 1), @Expect(type = TargetPollEvent.class, count = 1),
-            @Expect(type = RolloutCreatedEvent.class, count = 2), @Expect(type = RolloutUpdatedEvent.class, count = 6),
-            @Expect(type = RolloutGroupCreatedEvent.class, count = 2),
-            @Expect(type = RolloutGroupUpdatedEvent.class, count = 4),
-            @Expect(type = TenantConfigurationCreatedEvent.class, count = 1) })
-    public void startRolloutsWithSameDsInMultiAssignMode() {
-        enableMultiAssignments();
-        final String controllerId = TARGET_PREFIX + "startRolloutsWithSameDsInMultiAssignMode";
-
-        registerAndAssertTargetWithExistingTenant(controllerId);
-        final DistributionSet ds = testdataFactory.createDistributionSet();
-        final Set<Long> smIds = getSoftwareModuleIds(ds);
-        final String filterQuery = "controllerId==" + controllerId;
-
-        createAndStartRollout(ds, filterQuery, 122);
-        waitUntilEventMessagesAreDispatchedToTarget(EventTopic.MULTI_ACTION);
-        assertLatestMultiActionMessageContainsInstallMessages(controllerId, Collections.singletonList(smIds));
-
-        createAndStartRollout(ds, filterQuery, 43);
-        waitUntilEventMessagesAreDispatchedToTarget(EventTopic.MULTI_ACTION);
-        assertLatestMultiActionMessageContainsInstallMessages(controllerId, Arrays.asList(smIds, smIds));
-    }
-
-    @Test
-    @Description("If multi assignment is enabled finishing one rollout does not affect other rollouts of the target.")
-    @ExpectEvents({ @Expect(type = TargetCreatedEvent.class, count = 1),
-            @Expect(type = MultiActionAssignEvent.class, count = 3),
-            @Expect(type = ActionCreatedEvent.class, count = 3), @Expect(type = ActionUpdatedEvent.class, count = 5),
-            @Expect(type = SoftwareModuleCreatedEvent.class, count = 6),
-            @Expect(type = DistributionSetCreatedEvent.class, count = 2),
-            @Expect(type = TargetUpdatedEvent.class, count = 5), @Expect(type = TargetPollEvent.class, count = 1),
-            @Expect(type = TargetAttributesRequestedEvent.class, count = 2),
-            @Expect(type = RolloutCreatedEvent.class, count = 3), @Expect(type = RolloutUpdatedEvent.class, count = 9),
-            @Expect(type = RolloutGroupCreatedEvent.class, count = 3),
-            @Expect(type = RolloutGroupUpdatedEvent.class, count = 6),
-            @Expect(type = TenantConfigurationCreatedEvent.class, count = 1) })
-    public void startMultipleRolloutsAndFinishInMultiAssignMode() {
-        enableMultiAssignments();
-        final String controllerId = TARGET_PREFIX + "startMultipleRolloutsAndFinishInMultiAssignMode";
-
-        registerAndAssertTargetWithExistingTenant(controllerId);
-        final String filterQuery = "controllerId==" + controllerId;
-        final DistributionSet ds1 = testdataFactory.createDistributionSet();
-        final Set<Long> smIds1 = getSoftwareModuleIds(ds1);
-        final DistributionSet ds2 = testdataFactory.createDistributionSet();
-        final Set<Long> smIds2 = getSoftwareModuleIds(ds2);
-
-        createAndStartRollout(ds1, filterQuery, 12);
-        createAndStartRollout(ds2, filterQuery, 45);
-        waitUntilEventMessagesAreDispatchedToTarget(EventTopic.MULTI_ACTION, EventTopic.MULTI_ACTION);
-        createAndStartRollout(ds1, filterQuery, 65);
-        waitUntilEventMessagesAreDispatchedToTarget(EventTopic.MULTI_ACTION);
-        assertLatestMultiActionMessageContainsInstallMessages(controllerId, Arrays.asList(smIds1, smIds2, smIds1));
-
-        final List<Long> installActions = getLatestMultiActionMessageActions(controllerId).stream()
-                .filter(entry -> entry.getValue().equals(EventTopic.DOWNLOAD_AND_INSTALL)).map(Entry::getKey)
-                .collect(Collectors.toList());
-
-        updateActionViaDmfClient(controllerId, installActions.get(0), DmfActionStatus.FINISHED);
-        waitUntilEventMessagesAreDispatchedToTarget(EventTopic.REQUEST_ATTRIBUTES_UPDATE, EventTopic.MULTI_ACTION);
-        assertLatestMultiActionMessageContainsInstallMessages(controllerId, Arrays.asList(smIds2, smIds1));
-
-        updateActionViaDmfClient(controllerId, installActions.get(1), DmfActionStatus.FINISHED);
-        waitUntilEventMessagesAreDispatchedToTarget(EventTopic.REQUEST_ATTRIBUTES_UPDATE, EventTopic.MULTI_ACTION);
-        assertLatestMultiActionMessageContainsInstallMessages(controllerId, Collections.singletonList(smIds1));
-    }
-
     private Set<Long> getSoftwareModuleIds(final DistributionSet ds) {
         return ds.getModules().stream().map(SoftwareModule::getId).collect(Collectors.toSet());
     }
@@ -468,93 +746,6 @@ public class AmqpMessageDispatcherServiceIntegrationTest extends AbstractAmqpSer
         return rollout;
     }
 
-    @Test
-    @Description("Verify that a cancel assignment send a cancel message.")
-    @ExpectEvents({ @Expect(type = TargetCreatedEvent.class, count = 1),
-            @Expect(type = TargetAssignDistributionSetEvent.class, count = 1),
-            @Expect(type = CancelTargetAssignmentEvent.class, count = 1),
-            @Expect(type = ActionUpdatedEvent.class, count = 1), @Expect(type = ActionCreatedEvent.class, count = 1),
-            @Expect(type = SoftwareModuleCreatedEvent.class, count = 3),
-            @Expect(type = SoftwareModuleUpdatedEvent.class, count = 6),
-            @Expect(type = DistributionSetCreatedEvent.class, count = 1),
-            @Expect(type = TargetUpdatedEvent.class, count = 1), @Expect(type = TargetPollEvent.class, count = 2) })
-    public void sendCancelStatus() {
-        final String controllerId = TARGET_PREFIX + "sendCancelStatus";
-
-        final Long actionId = registerTargetAndCancelActionId(controllerId);
-
-        createAndSendThingCreated(controllerId);
-        waitUntilTargetHasStatus(controllerId, TargetUpdateStatus.PENDING);
-        assertCancelActionMessage(actionId, controllerId);
-    }
-
-    @Test
-    @Description("Verify that when a target is deleted a target delete message is send.")
-    @ExpectEvents({ @Expect(type = TargetCreatedEvent.class, count = 1),
-            @Expect(type = TargetPollEvent.class, count = 1), @Expect(type = TargetDeletedEvent.class, count = 1) })
-    public void sendDeleteMessage() {
-        final String controllerId = TARGET_PREFIX + "sendDeleteMessage";
-
-        registerAndAssertTargetWithExistingTenant(controllerId);
-        targetManagement.deleteByControllerID(controllerId);
-        assertDeleteMessage(controllerId);
-    }
-
-    @Test
-    @Description("Verify that attribute update is requested after device successfully closed software update.")
-    @ExpectEvents({ @Expect(type = TargetCreatedEvent.class, count = 1),
-            @Expect(type = TargetAssignDistributionSetEvent.class, count = 2),
-            @Expect(type = ActionUpdatedEvent.class, count = 2), @Expect(type = ActionCreatedEvent.class, count = 2),
-            @Expect(type = SoftwareModuleCreatedEvent.class, count = 6),
-            @Expect(type = DistributionSetCreatedEvent.class, count = 2),
-            @Expect(type = TargetUpdatedEvent.class, count = 4),
-            @Expect(type = TargetAttributesRequestedEvent.class, count = 1),
-            @Expect(type = TargetPollEvent.class, count = 1) })
-    public void attributeRequestAfterSuccessfulUpdate() {
-        final String controllerId = TARGET_PREFIX + "attributeUpdateRequest";
-        registerAndAssertTargetWithExistingTenant(controllerId);
-
-        final long actionId1 = assignNewDsToTarget(controllerId);
-        updateActionViaDmfClient(controllerId, actionId1, DmfActionStatus.ERROR);
-        waitUntilTargetHasStatus(controllerId, TargetUpdateStatus.ERROR);
-        assertRequestAttributesUpdateMessageAbsent();
-
-        final long actionId2 = assignNewDsToTarget(controllerId);
-        updateActionViaDmfClient(controllerId, actionId2, DmfActionStatus.FINISHED);
-        waitUntilTargetHasStatus(controllerId, TargetUpdateStatus.IN_SYNC);
-        assertRequestAttributesUpdateMessage(controllerId);
-    }
-
-    @Test
-    @Description("Tests the download_only assignment: asserts correct dmf Message topic, and assigned DS")
-    @ExpectEvents({ @Expect(type = TargetCreatedEvent.class, count = 1),
-            @Expect(type = TargetAssignDistributionSetEvent.class, count = 1),
-            @Expect(type = ActionCreatedEvent.class, count = 1),
-            @Expect(type = SoftwareModuleCreatedEvent.class, count = 3),
-            @Expect(type = SoftwareModuleUpdatedEvent.class, count = 6),
-            @Expect(type = DistributionSetCreatedEvent.class, count = 1),
-            @Expect(type = TargetUpdatedEvent.class, count = 1), @Expect(type = TargetPollEvent.class, count = 1) })
-    public void downloadOnlyAssignmentSendsDownloadMessageTopic() {
-        final String controllerId = TARGET_PREFIX + "registerTargets_1";
-        final DistributionSet distributionSet = createTargetAndDistributionSetAndAssign(controllerId, DOWNLOAD_ONLY);
-
-        final Message message = assertReplyMessageHeader(EventTopic.DOWNLOAD, controllerId);
-        Mockito.verifyNoInteractions(getDeadletterListener());
-
-        assertThat(message).isNotNull();
-        final Map<String, Object> headers = message.getMessageProperties().getHeaders();
-        assertThat(headers).containsEntry("thingId", controllerId);
-        assertThat(headers).containsEntry("type", EVENT.toString());
-        assertThat(headers).containsEntry("topic", DOWNLOAD.toString());
-
-        final Optional<Target> target = controllerManagement.getByControllerId(controllerId);
-        assertThat(target).isPresent();
-
-        // verify the DS was assigned to the Target
-        final DistributionSet assignedDistributionSet = ((JpaTarget) target.get()).getAssignedDistributionSet();
-        assertThat(assignedDistributionSet.getId()).isEqualTo(distributionSet.getId());
-    }
-
     private void waitUntilTargetHasStatus(final String controllerId, final TargetUpdateStatus status) {
         waitUntil(() -> {
             final Optional<Target> findTargetByControllerID = targetManagement.getByControllerID(controllerId);
@@ -564,155 +755,31 @@ public class AmqpMessageDispatcherServiceIntegrationTest extends AbstractAmqpSer
     }
 
     private void waitUntil(final Callable<Boolean> callable) {
-        createConditionFactory().until(() -> WithSpringAuthorityRule.runAsPrivileged(callable));
+        createConditionFactory().until(() -> SecurityContextSwitch.runAsPrivileged(callable));
     }
 
     private void assertLatestMultiActionMessageContainsInstallMessages(final String controllerId,
             final List<Set<Long>> smIdsOfActionsExpected) {
         final Message multiactionMessage = replyToListener.getLatestEventMessage(EventTopic.MULTI_ACTION);
-        assertThat(multiactionMessage.getMessageProperties().getHeaders().get(MessageHeaderKey.THING_ID))
-                .isEqualTo(controllerId);
-        final DmfMultiActionRequest multiActionRequest = (DmfMultiActionRequest) getDmfClient().getMessageConverter()
-                .fromMessage(multiactionMessage);
+        assertThat(multiactionMessage.getMessageProperties().getHeaders()).containsEntry(MessageHeaderKey.THING_ID, controllerId);
+        final DmfMultiActionRequest multiActionRequest =
+                (DmfMultiActionRequest) getDmfClient().getMessageConverter().fromMessage(multiactionMessage);
 
         final List<Set<Long>> smIdsOfActionsFound = getDownloadAndUpdateRequests(multiActionRequest).stream()
-                .map(AmqpMessageDispatcherServiceIntegrationTest::getSmIds).collect(Collectors.toList());
+                .map(AmqpMessageDispatcherServiceIntegrationTest::getSmIds).toList();
         assertThat(smIdsOfActionsFound).containsExactlyInAnyOrderElementsOf(smIdsOfActionsExpected);
     }
 
     private void assertLatestMultiActionMessage(final String controllerId,
-            final List<Entry<Long, EventTopic>> actionsExpected) {
-        final List<Entry<Long, EventTopic>> actionsFromMessage = getLatestMultiActionMessageActions(controllerId);
+            final List<SimpleEntry<Long, EventTopic>> actionsExpected) {
+        final List<SimpleEntry<Long, EventTopic>> actionsFromMessage = getLatestMultiActionMessageActions(controllerId);
         assertThat(actionsFromMessage).containsExactlyInAnyOrderElementsOf(actionsExpected);
     }
 
-    private List<Entry<Long, EventTopic>> getLatestMultiActionMessageActions(final String expectedControllerId) {
+    private List<SimpleEntry<Long, EventTopic>> getLatestMultiActionMessageActions(final String expectedControllerId) {
         final List<DmfMultiActionElement> multiActionRequest = getLatestMultiActionMessages(expectedControllerId);
         return multiActionRequest.stream()
                 .map(request -> new SimpleEntry<>(request.getAction().getActionId(), request.getTopic()))
-                .collect(Collectors.toList());
-    }
-
-    private static Set<Long> getSmIds(final DmfDownloadAndUpdateRequest request) {
-        return request.getSoftwareModules().stream().map(DmfSoftwareModule::getModuleId).collect(Collectors.toSet());
-    }
-
-    private static List<DmfDownloadAndUpdateRequest> getDownloadAndUpdateRequests(final DmfMultiActionRequest request) {
-        return request.getElements().stream()
-                .filter(AmqpMessageDispatcherServiceIntegrationTest::isDownloadAndUpdateRequest)
-                .map(multiAction -> (DmfDownloadAndUpdateRequest) multiAction.getAction()).collect(Collectors.toList());
-    }
-
-    private static boolean isDownloadAndUpdateRequest(final DmfMultiActionElement multiActionElement) {
-        return multiActionElement.getTopic().equals(EventTopic.DOWNLOAD)
-                || multiActionElement.getTopic().equals(EventTopic.DOWNLOAD_AND_INSTALL);
-    }
-
-    @Test
-    @Description("Verify payload of batch assignment download and install message.")
-    public void assertBatchAssignmentsDownloadAndInstall() {
-        assertBatchAssignmentsMessagePayload(BATCH_DOWNLOAD_AND_INSTALL);
-    }
-
-    @Test
-    @Description("Verify payload of batch assignments download only message.")
-    public void assertBatchAssignmentsDownloadOnly() {
-        assertBatchAssignmentsMessagePayload(BATCH_DOWNLOAD);
-    }
-
-    @Test
-    @Description("Verify that batch and multi-assignments can't be activated at the same time.")
-    void assertBatchAndMultiAssignmentsNotCompatible() {
-        enableBatchAssignments();
-        assertThatExceptionOfType(TenantConfigurationValueChangeNotAllowedException.class)
-                .isThrownBy(() -> enableMultiAssignments());
-        disableBatchAssignments();
-
-        enableMultiAssignments();
-        assertThatExceptionOfType(TenantConfigurationValueChangeNotAllowedException.class)
-                .isThrownBy(() -> enableBatchAssignments());
-    }
-
-    @ParameterizedTest
-    @EnumSource(names = { "BATCH_DOWNLOAD_AND_INSTALL", "BATCH_DOWNLOAD" })
-    @Description("Verify payload of batch assignments.")
-    @ExpectEvents({ @Expect(type = TargetCreatedEvent.class, count = 3),
-            @Expect(type = TargetAssignDistributionSetEvent.class, count = 1),
-            @Expect(type = ActionCreatedEvent.class, count = 3), @Expect(type = ActionUpdatedEvent.class, count = 0),
-            @Expect(type = SoftwareModuleCreatedEvent.class, count = 3),
-            @Expect(type = SoftwareModuleUpdatedEvent.class, count = 6),
-            @Expect(type = DistributionSetCreatedEvent.class, count = 1),
-            @Expect(type = TargetUpdatedEvent.class, count = 3), @Expect(type = TargetPollEvent.class, count = 3),
-            @Expect(type = TenantConfigurationCreatedEvent.class, count = 1) })
-    void assertBatchAssignmentsMessagePayload(final EventTopic topic) {
-        enableBatchAssignments();
-
-        final List<String> targets = Arrays.asList("batchCtrlID1", "batchCtrlID2", "batchCtrlID3");
-        for (int i = 0; i < targets.size(); i++) {
-            registerAndAssertTargetWithExistingTenant(targets.get(i), i+1);
-        }
-
-        final DistributionSet ds = testdataFactory.createDistributionSet();
-        testdataFactory.addSoftwareModuleMetadata(ds);
-
-        assignDistributionSet(ds.getId(), targets, topic == BATCH_DOWNLOAD?DOWNLOAD_ONLY:FORCED);
-
-        waitUntilEventMessagesAreDispatchedToTarget(topic);
-
-        final Message message = replyToListener.getLatestEventMessage(topic);
-        final Map<String, Object> headers = message.getMessageProperties().getHeaders();
-        assertThat(headers).containsEntry("type", EVENT.toString());
-        assertThat(headers).containsEntry("topic",topic.toString());
-
-        final DmfBatchDownloadAndUpdateRequest batchRequest = (DmfBatchDownloadAndUpdateRequest) getDmfClient()
-                .getMessageConverter().fromMessage(message);
-
-        assertThat(batchRequest).isExactlyInstanceOf(DmfBatchDownloadAndUpdateRequest.class);
-        assertDmfBatchDownloadAndUpdateRequest(batchRequest, ds.getModules(), targets);
-    }
-
-    protected void assertDmfBatchDownloadAndUpdateRequest(final DmfBatchDownloadAndUpdateRequest request,
-                                                     final Set<SoftwareModule> softwareModules,
-                                                     final List<String> controllerIds) {
-        assertSoftwareModules(softwareModules, request.getSoftwareModules());
-
-        final List<Object> tokens = controllerIds.stream().map(controllerId -> {
-            final Optional<Target> target = controllerManagement.getByControllerId(controllerId);
-            assertThat(target).isPresent();
-            return target.get().getSecurityToken();
-        }).collect(Collectors.toList());
-
-
-        final List<DmfTarget> requestTargets = request.getTargets();
-
-        assertThat(requestTargets).hasSameSizeAs(controllerIds);
-        requestTargets.forEach(requestTarget -> {
-                    assertThat(requestTarget).isNotNull();
-                    assertThat(tokens.contains(requestTarget.getTargetSecurityToken()));
-                });
-    }
-
-    @Test
-    @Description("Verify that a distribution assignment send a confirm message.")
-    @ExpectEvents({ @Expect(type = TargetCreatedEvent.class, count = 1),
-            @Expect(type = TargetAssignDistributionSetEvent.class, count = 1),
-            @Expect(type = ActionCreatedEvent.class, count = 1),
-            @Expect(type = SoftwareModuleCreatedEvent.class, count = 3),
-            @Expect(type = SoftwareModuleUpdatedEvent.class, count = 6),
-            @Expect(type = DistributionSetCreatedEvent.class, count = 1),
-            @Expect(type = TargetUpdatedEvent.class, count = 1),
-            @Expect(type = TargetPollEvent.class, count = 1),
-            @Expect(type = TenantConfigurationCreatedEvent.class, count = 1) })
-    void sendConfirmStatus() {
-        final String controllerId = TARGET_PREFIX + "sendConfirmStatus";
-        enableConfirmationFlow();
-        registerTargetAndAssignDistributionSet(controllerId);
-
-        waitUntilTargetHasStatus(controllerId, TargetUpdateStatus.PENDING);
-        assertConfirmMessage(getDistributionSet().getModules(), controllerId);
-        assertEventMessageNotPresent(EventTopic.DOWNLOAD_AND_INSTALL);
-    }
-    protected void assertEventMessageNotPresent(final EventTopic eventTopic) {
-        assertThat(replyToListener.getLatestEventMessage(eventTopic)).isNull();
+                .toList();
     }
 }
