@@ -1,19 +1,21 @@
 /**
- * Copyright (c) 2015 Bosch Software Innovations GmbH and others.
+ * Copyright (c) 2015 Bosch Software Innovations GmbH and others
  *
- * All rights reserved. This program and the accompanying materials
- * are made available under the terms of the Eclipse Public License v1.0
- * which accompanies this distribution, and is available at
- * http://www.eclipse.org/legal/epl-v10.html
+ * This program and the accompanying materials are made
+ * available under the terms of the Eclipse Public License 2.0
+ * which is available at https://www.eclipse.org/legal/epl-2.0/
+ *
+ * SPDX-License-Identifier: EPL-2.0
  */
 package org.eclipse.hawkbit.repository.event.remote;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
-import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
+import io.qameta.allure.Description;
+import io.qameta.allure.Feature;
+import io.qameta.allure.Story;
 import org.eclipse.hawkbit.repository.jpa.model.JpaAction;
 import org.eclipse.hawkbit.repository.model.Action;
 import org.eclipse.hawkbit.repository.model.Action.ActionType;
@@ -22,32 +24,18 @@ import org.eclipse.hawkbit.repository.model.ActionProperties;
 import org.eclipse.hawkbit.repository.model.DistributionSet;
 import org.junit.jupiter.api.Test;
 
-import io.qameta.allure.Description;
-import io.qameta.allure.Feature;
-import io.qameta.allure.Story;
-
 @Feature("Component Tests - Repository")
 @Story("RemoteTenantAwareEvent Tests")
-public class RemoteTenantAwareEventTest extends AbstractRemoteEventTest {
+class RemoteTenantAwareEventTest extends AbstractRemoteEventTest {
 
     private static final String TENANT_DEFAULT = "DEFAULT";
-
     private static final String APPLICATION_ID_DEFAULT = "Node";
-
-    private Action createAction(final String controllerId) {
-        final JpaAction generateAction = new JpaAction();
-        generateAction.setActionType(ActionType.FORCED);
-        generateAction.setTarget(testdataFactory.createTarget(controllerId));
-        generateAction.setStatus(Status.RUNNING);
-        return generateAction;
-    }
 
     @Test
     @Description("Verifies that a testMultiActionAssignEvent can be properly serialized and deserialized")
-    public void testMultiActionAssignEvent() {
-        final List<String> controllerIds = Arrays.asList("id0", "id1", "id2", "id3",
-                "id4loooooooooooooooooooooooooooooooooooonnnnnnnnnnnnnnnnnng");
-        final List<Action> actions = controllerIds.stream().map(this::createAction).collect(Collectors.toList());
+    void testMultiActionAssignEvent() {
+        final List<String> controllerIds = List.of("id0", "id1", "id2", "id3", "id4loooooooooooooooooooooooooooooooooooonnnnnnnnnnnnnnnnnng");
+        final List<Action> actions = controllerIds.stream().map(this::createAction).toList();
 
         final MultiActionAssignEvent assignEvent = new MultiActionAssignEvent(TENANT_DEFAULT, APPLICATION_ID_DEFAULT,
                 actions);
@@ -63,10 +51,9 @@ public class RemoteTenantAwareEventTest extends AbstractRemoteEventTest {
 
     @Test
     @Description("Verifies that a MultiActionCancelEvent can be properly serialized and deserialized")
-    public void testMultiActionCancelEvent() {
-        final List<String> controllerIds = Arrays.asList("id0", "id1", "id2", "id3",
-                "id4loooooooooooooooooooooooooooooooooooonnnnnnnnnnnnnnnnnng");
-        final List<Action> actions = controllerIds.stream().map(this::createAction).collect(Collectors.toList());
+    void testMultiActionCancelEvent() {
+        final List<String> controllerIds = List.of("id0", "id1", "id2", "id3", "id4loooooooooooooooooooooooooooooooooooonnnnnnnnnnnnnnnnnng");
+        final List<Action> actions = controllerIds.stream().map(this::createAction).toList();
 
         final MultiActionCancelEvent cancelEvent = new MultiActionCancelEvent(TENANT_DEFAULT, APPLICATION_ID_DEFAULT,
                 actions);
@@ -82,7 +69,7 @@ public class RemoteTenantAwareEventTest extends AbstractRemoteEventTest {
 
     @Test
     @Description("Verifies that a DownloadProgressEvent can be properly serialized and deserialized")
-    public void reloadDownloadProgessByRemoteEvent() {
+    void reloadDownloadProgressByRemoteEvent() {
         final DownloadProgressEvent downloadProgressEvent = new DownloadProgressEvent(TENANT_DEFAULT, 1L, 3L,
                 APPLICATION_ID_DEFAULT);
 
@@ -95,7 +82,7 @@ public class RemoteTenantAwareEventTest extends AbstractRemoteEventTest {
 
     @Test
     @Description("Verifies that a TargetAssignDistributionSetEvent can be properly serialized and deserialized")
-    public void testTargetAssignDistributionSetEvent() {
+    void testTargetAssignDistributionSetEvent() {
 
         final DistributionSet dsA = testdataFactory.createDistributionSet("");
 
@@ -105,11 +92,12 @@ public class RemoteTenantAwareEventTest extends AbstractRemoteEventTest {
         generateAction.setDistributionSet(dsA);
         generateAction.setStatus(Status.RUNNING);
         generateAction.setInitiatedBy(tenantAware.getCurrentUsername());
+        generateAction.setWeight(1000);
 
         final Action action = actionRepository.save(generateAction);
 
         final TargetAssignDistributionSetEvent assignmentEvent = new TargetAssignDistributionSetEvent(
-                action.getTenant(), dsA.getId(), Arrays.asList(action), serviceMatcher.getBusId(),
+                action.getTenant(), dsA.getId(), List.of(action), serviceMatcher.getBusId(),
                 action.isMaintenanceWindowAvailable());
 
         final TargetAssignDistributionSetEvent remoteEventProtoStuff = createProtoStuffEvent(assignmentEvent);
@@ -121,7 +109,7 @@ public class RemoteTenantAwareEventTest extends AbstractRemoteEventTest {
 
     @Test
     @Description("Verifies that a TargetAssignDistributionSetEvent can be properly serialized and deserialized")
-    public void testCancelTargetAssignmentEvent() {
+    void testCancelTargetAssignmentEvent() {
 
         final DistributionSet dsA = testdataFactory.createDistributionSet("");
 
@@ -131,6 +119,7 @@ public class RemoteTenantAwareEventTest extends AbstractRemoteEventTest {
         generateAction.setDistributionSet(dsA);
         generateAction.setStatus(Status.RUNNING);
         generateAction.setInitiatedBy(tenantAware.getCurrentUsername());
+        generateAction.setWeight(1000);
 
         final Action action = actionRepository.save(generateAction);
 
@@ -144,21 +133,30 @@ public class RemoteTenantAwareEventTest extends AbstractRemoteEventTest {
         assertCancelTargetAssignmentEvent(action, remoteEventJackson);
     }
 
+    private Action createAction(final String controllerId) {
+        final JpaAction generateAction = new JpaAction();
+        generateAction.setId(1L);
+        generateAction.setActionType(ActionType.FORCED);
+        generateAction.setTarget(testdataFactory.createTarget(controllerId));
+        generateAction.setStatus(Status.RUNNING);
+        return generateAction;
+    }
+
     private void assertTargetAssignDistributionSetEvent(final Action action,
             final TargetAssignDistributionSetEvent underTest) {
 
-        assertThat(underTest.getActions().size()).isEqualTo(1);
+        assertThat(underTest.getActions()).hasSize(1);
         final ActionProperties actionProperties = underTest.getActions().get(action.getTarget().getControllerId());
         assertThat(actionProperties).isNotNull();
-        assertThat(actionProperties).isEqualToComparingFieldByField(new ActionProperties(action));
+        assertThat(actionProperties).usingRecursiveComparison().comparingOnlyFields().isEqualTo(new ActionProperties(action));
         assertThat(underTest.getDistributionSetId()).isEqualTo(action.getDistributionSet().getId());
     }
 
     private void assertCancelTargetAssignmentEvent(final Action action, final CancelTargetAssignmentEvent underTest) {
-        assertThat(underTest.getActions().size()).isEqualTo(1);
+        assertThat(underTest.getActions()).hasSize(1);
         final ActionProperties actionProperties = underTest.getActions().get(action.getTarget().getControllerId());
         assertThat(actionProperties).isNotNull();
-        assertThat(actionProperties).isEqualToComparingFieldByField(new ActionProperties(action));
+        assertThat(actionProperties).usingRecursiveComparison().comparingOnlyFields().isEqualTo(new ActionProperties(action));
         assertThat(underTest.getActionPropertiesForController(action.getTarget().getControllerId())).isPresent();
     }
 }
