@@ -1,10 +1,11 @@
 /**
- * Copyright (c) 2015 Bosch Software Innovations GmbH and others.
+ * Copyright (c) 2015 Bosch Software Innovations GmbH and others
  *
- * All rights reserved. This program and the accompanying materials
- * are made available under the terms of the Eclipse Public License v1.0
- * which accompanies this distribution, and is available at
- * http://www.eclipse.org/legal/epl-v10.html
+ * This program and the accompanying materials are made
+ * available under the terms of the Eclipse Public License 2.0
+ * which is available at https://www.eclipse.org/legal/epl-2.0/
+ *
+ * SPDX-License-Identifier: EPL-2.0
  */
 package org.eclipse.hawkbit.repository.jpa.autoassign;
 
@@ -19,9 +20,15 @@ import java.util.Set;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
+import io.qameta.allure.Description;
+import io.qameta.allure.Feature;
+import io.qameta.allure.Step;
+import io.qameta.allure.Story;
+import org.eclipse.hawkbit.repository.DeploymentManagement;
+import org.eclipse.hawkbit.repository.builder.AutoAssignDistributionSetUpdate;
 import org.eclipse.hawkbit.repository.exception.IncompleteDistributionSetException;
 import org.eclipse.hawkbit.repository.jpa.AbstractJpaIntegrationTest;
-import org.eclipse.hawkbit.repository.jpa.ActionRepository;
+import org.eclipse.hawkbit.repository.jpa.specifications.ActionSpecifications;
 import org.eclipse.hawkbit.repository.model.Action;
 import org.eclipse.hawkbit.repository.model.Action.ActionType;
 import org.eclipse.hawkbit.repository.model.Action.Status;
@@ -40,24 +47,20 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.domain.Slice;
 
-import io.qameta.allure.Description;
-import io.qameta.allure.Feature;
-import io.qameta.allure.Step;
-import io.qameta.allure.Story;
-
 /**
  * Test class for {@link AutoAssignChecker}.
- *
  */
 @Feature("Component Tests - Repository")
 @Story("Auto assign checker")
+@SuppressWarnings("java:S6813") // constructor injects are not possible for test classes
 class AutoAssignCheckerIntTest extends AbstractJpaIntegrationTest {
+
+    private static final String SPACE_AND_DESCRIPTION = " description";
 
     @Autowired
     private AutoAssignChecker autoAssignChecker;
-
     @Autowired
-    private ActionRepository actionRepository;
+    private DeploymentManagement deploymentManagement;
 
     @Test
     @Description("Verifies that a running action is auto canceled by a AutoAssignment which assigns another distribution-set.")
@@ -106,11 +109,8 @@ class AutoAssignCheckerIntTest extends AbstractJpaIntegrationTest {
     @Test
     @Description("Test auto assignment of a DS to filtered targets")
     void checkAutoAssign() {
-
-        final DistributionSet setA = testdataFactory.createDistributionSet("dsA"); // will
-                                                                                   // be
-                                                                                   // auto
-                                                                                   // assigned
+        // will be auto assigned
+        final DistributionSet setA = testdataFactory.createDistributionSet("dsA");
         final DistributionSet setB = testdataFactory.createDistributionSet("dsB");
 
         // target filter query that matches all targets
@@ -119,20 +119,24 @@ class AutoAssignCheckerIntTest extends AbstractJpaIntegrationTest {
                 .updateAutoAssign(targetFilterQueryManagement
                         .create(entityFactory.targetFilterQuery().create().name("filterA").query("name==*")).getId())
                 .ds(setA.getId()));
+        implicitLock(setA);
 
         final String targetDsAIdPref = "targ";
         final List<Target> targets = testdataFactory.createTargets(25, targetDsAIdPref,
-                targetDsAIdPref.concat(" description"));
+                targetDsAIdPref.concat(SPACE_AND_DESCRIPTION));
         final int targetsCount = targets.size();
 
         // assign set A to first 10 targets
         assignDistributionSet(setA, targets.subList(0, 10));
+        // because of targetFilterQuery the assigned to targets group is a locked one
+        // in the rest it is locked in process and targets gets unlocked (?)
         verifyThatTargetsHaveDistributionSetAssignment(setA, targets.subList(0, 10), targetsCount);
 
         // assign set B to first 5 targets
         // they have now 2 DS in their action history and should not get updated
         // with dsA
         assignDistributionSet(setB, targets.subList(0, 5));
+        implicitLock(setB);
         verifyThatTargetsHaveDistributionSetAssignment(setB, targets.subList(0, 5), targetsCount);
 
         // assign set B to next 10 targets
@@ -140,7 +144,7 @@ class AutoAssignCheckerIntTest extends AbstractJpaIntegrationTest {
         verifyThatTargetsHaveDistributionSetAssignment(setB, targets.subList(10, 20), targetsCount);
 
         // Count the number of targets that will be assigned with setA
-        assertThat(targetManagement.countByRsqlAndNonDSAndCompatible(setA.getId(), targetFilterQuery.getQuery()))
+        assertThat(targetManagement.countByRsqlAndNonDSAndCompatibleAndUpdatable(setA.getId(), targetFilterQuery.getQuery()))
                 .isEqualTo(15);
 
         // Run the check
@@ -165,6 +169,7 @@ class AutoAssignCheckerIntTest extends AbstractJpaIntegrationTest {
                 .updateAutoAssign(targetFilterQueryManagement
                         .create(entityFactory.targetFilterQuery().create().name("filterA").query("name==*")).getId())
                 .ds(toAssignDs.getId()));
+        implicitLock(toAssignDs);
 
         final List<Target> targets = testdataFactory.createTargets(25);
         final int targetsCount = targets.size();
@@ -189,7 +194,7 @@ class AutoAssignCheckerIntTest extends AbstractJpaIntegrationTest {
             enableConfirmationFlow();
         }
 
-        final TargetFilterQuery targetFilterQuery = targetFilterQueryManagement.updateAutoAssignDS(entityFactory
+        targetFilterQueryManagement.updateAutoAssignDS(entityFactory
                 .targetFilterQuery()
                 .updateAutoAssign(targetFilterQueryManagement
                         .create(entityFactory.targetFilterQuery().create().name("filterA").query("name==*")).getId())
@@ -197,7 +202,7 @@ class AutoAssignCheckerIntTest extends AbstractJpaIntegrationTest {
 
         final String targetDsAIdPref = "targ";
         final List<Target> targets = testdataFactory.createTargets(20, targetDsAIdPref,
-                targetDsAIdPref.concat(" description"));
+                targetDsAIdPref.concat(SPACE_AND_DESCRIPTION));
 
         // Run the check
         autoAssignChecker.checkAllTargets();
@@ -232,14 +237,6 @@ class AutoAssignCheckerIntTest extends AbstractJpaIntegrationTest {
         verifyThatTargetsNotHaveDistributionSetAssignment(toAssignDs, targets.subList(1, 25));
     }
 
-    private static Stream<Arguments> confirmationOptions() {
-        return Stream.of( //
-                Arguments.of(true, true, Status.WAIT_FOR_CONFIRMATION), //
-                Arguments.of(true, false, Status.RUNNING), //
-                Arguments.of(false, true, Status.RUNNING), //
-                Arguments.of(false, false, Status.RUNNING));
-    }
-
     @Test
     @Description("Test auto assignment of an incomplete DS to filtered targets, that causes failures")
     void checkAutoAssignWithFailures() {
@@ -253,29 +250,29 @@ class AutoAssignCheckerIntTest extends AbstractJpaIntegrationTest {
         final String targetDsAIdPref = "targA";
         final String targetDsFIdPref = "targB";
 
-        // target filter query that matches first bunch of targets, that should
-        // fail
-        assertThatExceptionOfType(IncompleteDistributionSetException.class).isThrownBy(() -> {
-            final Long filterId = targetFilterQueryManagement.create(
-                    entityFactory.targetFilterQuery().create().name("filterA").query("id==" + targetDsFIdPref + "*"))
-                    .getId();
-            targetFilterQueryManagement
-                    .updateAutoAssignDS(entityFactory.targetFilterQuery().updateAutoAssign(filterId).ds(setF.getId()));
-        });
+        final Long filterId = targetFilterQueryManagement.create(
+                        entityFactory.targetFilterQuery().create().name("filterA").query("id==" + targetDsFIdPref + "*"))
+                .getId();
+        final AutoAssignDistributionSetUpdate targetFilterQuery = entityFactory.targetFilterQuery().updateAutoAssign(filterId).ds(setF.getId());
+        // target filter query that matches first bunch of targets, that should fail
+        assertThatExceptionOfType(IncompleteDistributionSetException.class).isThrownBy(
+                () -> targetFilterQueryManagement.updateAutoAssignDS(targetFilterQuery));
         // target filter query that matches failed bunch of targets
         targetFilterQueryManagement.create(entityFactory.targetFilterQuery().create().name("filterB")
                 .query("id==" + targetDsAIdPref + "*").autoAssignDistributionSet(setA.getId()));
+        implicitLock(setA);
 
         final List<Target> targetsF = testdataFactory.createTargets(10, targetDsFIdPref,
-                targetDsFIdPref.concat(" description"));
+                targetDsFIdPref.concat(SPACE_AND_DESCRIPTION));
 
         final List<Target> targetsA = testdataFactory.createTargets(10, targetDsAIdPref,
-                targetDsAIdPref.concat(" description"));
+                targetDsAIdPref.concat(SPACE_AND_DESCRIPTION));
 
         final int targetsCount = targetsA.size() + targetsF.size();
 
         // assign set B to first 5 targets of fail group
         assignDistributionSet(setB, targetsF.subList(0, 5));
+        implicitLock(setB);
         verifyThatTargetsHaveDistributionSetAssignment(setB, targetsF.subList(0, 5), targetsCount);
 
         // Run the check
@@ -289,72 +286,6 @@ class AutoAssignCheckerIntTest extends AbstractJpaIntegrationTest {
 
     }
 
-    /**
-     * @param set
-     *            the expected distribution set
-     * @param targets
-     *            the targets that should have it
-     */
-    @Step
-    private void verifyThatTargetsHaveDistributionSetAssignment(final DistributionSet set, final List<Target> targets,
-            final int count) {
-        final List<Long> targetIds = targets.stream().map(Target::getId).collect(Collectors.toList());
-
-        final Slice<Target> targetsAll = targetManagement.findAll(PAGE);
-        assertThat(targetsAll).as("Count of targets").hasSize(count);
-
-        for (final Target target : targetsAll) {
-            if (targetIds.contains(target.getId())) {
-                assertThat(deploymentManagement.getAssignedDistributionSet(target.getControllerId()).get())
-                        .as("assigned DS").isEqualTo(set);
-            }
-        }
-
-    }
-
-    @Step
-    private void verifyThatTargetsHaveDistributionSetAssignedAndActionStatus(final DistributionSet set,
-            final List<Target> targets, final Action.Status status) {
-        final List<String> targetIds = targets.stream().map(Target::getControllerId).collect(Collectors.toList());
-        final List<Target> targetsWithAssignedDS = targetManagement.findByAssignedDistributionSet(PAGE, set.getId())
-                .getContent();
-        assertThat(targetsWithAssignedDS).isNotEmpty();
-        assertThat(targetsWithAssignedDS).allMatch(target -> targetIds.contains(target.getControllerId()));
-
-        final List<Action> actionsByDs = deploymentManagement.findActionsByDistributionSet(PAGE, set.getId())
-                .getContent();
-
-        assertThat(actionsByDs).hasSize(targets.size());
-        assertThat(actionsByDs).allMatch(action -> action.getStatus() == status);
-    }
-
-    @Step
-    private void verifyThatTargetsNotHaveDistributionSetAssignment(final DistributionSet set,
-            final List<Target> targets) {
-        final List<Long> targetIds = targets.stream().map(Target::getId).collect(Collectors.toList());
-
-        final Slice<Target> targetsAll = targetManagement.findAll(PAGE);
-
-        for (final Target target : targetsAll) {
-            if (targetIds.contains(target.getId())) {
-                assertThat(deploymentManagement.getAssignedDistributionSet(target.getControllerId())).isEmpty();
-            }
-        }
-
-    }
-
-    @Step
-    private void verifyThatCreatedActionsAreInitiatedByCurrentUser(final TargetFilterQuery targetFilterQuery,
-            final DistributionSet distributionSet, final List<Target> targets) {
-        final Set<String> targetIds = targets.stream().map(Target::getControllerId).collect(Collectors.toSet());
-
-        actionRepository.findByDistributionSetId(Pageable.unpaged(), distributionSet.getId()).stream()
-                .filter(a -> targetIds.contains(a.getTarget().getControllerId()))
-                .forEach(a -> assertThat(a.getInitiatedBy())
-                        .as("Action should be initiated by the user who initiated the auto assignment")
-                        .isEqualTo(targetFilterQuery.getAutoAssignInitiatedBy()));
-    }
-
     @Test
     @Description("Test auto assignment of a distribution set with FORCED, SOFT and DOWNLOAD_ONLY action types")
     void checkAutoAssignWithDifferentActionTypes() {
@@ -365,6 +296,7 @@ class AutoAssignCheckerIntTest extends AbstractJpaIntegrationTest {
 
         final List<Target> targetsA = createTargetsAndAutoAssignDistSet(targetDsAIdPref, 5, distributionSet,
                 ActionType.FORCED);
+        implicitLock(distributionSet);
         final List<Target> targetsB = createTargetsAndAutoAssignDistSet(targetDsBIdPref, 10, distributionSet,
                 ActionType.SOFT);
         final List<Target> targetsC = createTargetsAndAutoAssignDistSet(targetDsCIdPref, 10, distributionSet,
@@ -383,32 +315,9 @@ class AutoAssignCheckerIntTest extends AbstractJpaIntegrationTest {
         verifyThatTargetsHaveAssignmentActionType(ActionType.DOWNLOAD_ONLY, targetsC);
     }
 
-    @Step
-    private List<Target> createTargetsAndAutoAssignDistSet(final String prefix, final int targetCount,
-            final DistributionSet distributionSet, final ActionType actionType) {
-
-        final List<Target> targets = testdataFactory.createTargets(targetCount, "target" + prefix,
-                prefix.concat(" description"));
-        targetFilterQueryManagement.create(
-                entityFactory.targetFilterQuery().create().name("filter" + prefix).query("id==target" + prefix + "*")
-                        .autoAssignDistributionSet(distributionSet).autoAssignActionType(actionType));
-
-        return targets;
-    }
-
-    @Step
-    private void verifyThatTargetsHaveAssignmentActionType(final ActionType actionType, final List<Target> targets) {
-        final List<Action> actions = targets.stream().map(Target::getControllerId).flatMap(
-                controllerId -> deploymentManagement.findActionsByTarget(controllerId, PAGE).getContent().stream())
-                .collect(Collectors.toList());
-
-        assertThat(actions).hasSize(targets.size());
-        assertThat(actions).allMatch(action -> action.getActionType().equals(actionType));
-    }
-
     @Test
     @Description("An auto assignment target filter with weight creates actions with weights")
-    void actionsWithWeightAreCreated() throws Exception {
+    void actionsWithWeightAreCreated() {
         final int amountOfTargets = 5;
         final DistributionSet ds = testdataFactory.createDistributionSet();
         final int weight = 32;
@@ -420,13 +329,14 @@ class AutoAssignCheckerIntTest extends AbstractJpaIntegrationTest {
         autoAssignChecker.checkAllTargets();
 
         final List<Action> actions = deploymentManagement.findActionsAll(PAGE).getContent();
-        assertThat(actions).hasSize(amountOfTargets);
-        assertThat(actions).allMatch(action -> action.getWeight().get() == weight);
+        assertThat(actions)
+                .hasSize(amountOfTargets)
+                .allMatch(action -> action.getWeight().get() == weight);
     }
 
     @Test
     @Description("An auto assignment target filter without weight still works after multi assignment is enabled")
-    void filterWithoutWeightWorksInMultiAssignmentMode() throws Exception {
+    void filterWithoutWeightWorksInMultiAssignmentMode() {
         final int amountOfTargets = 5;
         final DistributionSet ds = testdataFactory.createDistributionSet();
         targetFilterQueryManagement.create(
@@ -437,8 +347,9 @@ class AutoAssignCheckerIntTest extends AbstractJpaIntegrationTest {
         autoAssignChecker.checkAllTargets();
 
         final List<Action> actions = deploymentManagement.findActionsAll(PAGE).getContent();
-        assertThat(actions).hasSize(amountOfTargets);
-        assertThat(actions).allMatch(action -> !action.getWeight().isPresent());
+        assertThat(actions)
+                .hasSize(amountOfTargets)
+                .allMatch(action -> action.getWeight().isPresent());
     }
 
     @Test
@@ -478,8 +389,8 @@ class AutoAssignCheckerIntTest extends AbstractJpaIntegrationTest {
 
         final List<Long> compatibleTargets = Stream
                 .of(compatibleTargetsSingleType, compatibleTargetsMultiType, compatibleTargetsWithoutType)
-                .flatMap(Collection::stream).map(Target::getId).collect(Collectors.toList());
-        final long compatibleCount = targetManagement.countByRsqlAndNonDSAndCompatible(testDs.getId(),
+                .flatMap(Collection::stream).map(Target::getId).toList();
+        final long compatibleCount = targetManagement.countByRsqlAndNonDSAndCompatibleAndUpdatable(testDs.getId(),
                 testFilter.getQuery());
         assertThat(compatibleCount).isEqualTo(compatibleTargets.size());
 
@@ -487,7 +398,107 @@ class AutoAssignCheckerIntTest extends AbstractJpaIntegrationTest {
 
         final List<Action> actions = deploymentManagement.findActionsAll(Pageable.unpaged()).getContent();
         assertThat(actions).hasSize(compatibleTargets.size());
-        final List<Long> actionTargets = actions.stream().map(a -> a.getTarget().getId()).collect(Collectors.toList());
+        final List<Long> actionTargets = actions.stream().map(a -> a.getTarget().getId()).toList();
         assertThat(actionTargets).containsExactlyInAnyOrderElementsOf(compatibleTargets);
+    }
+
+    private static Stream<Arguments> confirmationOptions() {
+        return Stream.of( //
+                Arguments.of(true, true, Status.WAIT_FOR_CONFIRMATION), //
+                Arguments.of(true, false, Status.RUNNING), //
+                Arguments.of(false, true, Status.RUNNING), //
+                Arguments.of(false, false, Status.RUNNING));
+    }
+
+    /**
+     * @param set the expected distribution set
+     * @param targets the targets that should have it
+     */
+    @Step
+    private void verifyThatTargetsHaveDistributionSetAssignment(
+            final DistributionSet set, final List<Target> targets, final int count) {
+        final List<Long> targetIds = targets.stream().map(Target::getId).toList();
+
+        final Slice<Target> targetsAll = targetManagement.findAll(PAGE);
+        assertThat(targetsAll).as("Count of targets").hasSize(count);
+
+        for (final Target target : targetsAll) {
+            if (targetIds.contains(target.getId())) {
+                assertThat(deploymentManagement.getAssignedDistributionSet(target.getControllerId()))
+                        .as("assigned DS").contains(set);
+            }
+        }
+    }
+
+    @Step
+    private void verifyThatTargetsHaveDistributionSetAssignedAndActionStatus(final DistributionSet set,
+            final List<Target> targets, final Action.Status status) {
+        final List<String> targetIds = targets.stream().map(Target::getControllerId).toList();
+        final List<Target> targetsWithAssignedDS = targetManagement.findByAssignedDistributionSet(PAGE, set.getId()).getContent();
+        assertThat(targetsWithAssignedDS).isNotEmpty();
+        assertThat(targetsWithAssignedDS).allMatch(target -> targetIds.contains(target.getControllerId()));
+
+        final List<Action> actionsByDs = findActionsByDistributionSet(PAGE, set.getId())
+                .getContent();
+
+        assertThat(actionsByDs).hasSize(targets.size());
+        assertThat(actionsByDs).allMatch(action -> action.getStatus() == status);
+    }
+
+    @Step
+    private void verifyThatTargetsNotHaveDistributionSetAssignment(final DistributionSet set,
+            final List<Target> targets) {
+        final List<Long> targetIds = targets.stream().map(Target::getId).toList();
+
+        final Slice<Target> targetsAll = targetManagement.findAll(PAGE);
+
+        for (final Target target : targetsAll) {
+            if (targetIds.contains(target.getId())) {
+                assertThat(deploymentManagement.getAssignedDistributionSet(target.getControllerId())).isEmpty();
+            }
+        }
+
+    }
+
+    @Step
+    private void verifyThatCreatedActionsAreInitiatedByCurrentUser(final TargetFilterQuery targetFilterQuery,
+            final DistributionSet distributionSet, final List<Target> targets) {
+        final Set<String> targetIds = targets.stream().map(Target::getControllerId).collect(Collectors.toSet());
+
+        findActionsByDistributionSet(Pageable.unpaged(), distributionSet.getId()).stream()
+                .filter(a -> targetIds.contains(a.getTarget().getControllerId()))
+                .forEach(a -> assertThat(a.getInitiatedBy())
+                        .as("Action should be initiated by the user who initiated the auto assignment")
+                        .isEqualTo(targetFilterQuery.getAutoAssignInitiatedBy()));
+    }
+
+    @Step
+    private List<Target> createTargetsAndAutoAssignDistSet(final String prefix, final int targetCount,
+            final DistributionSet distributionSet, final ActionType actionType) {
+
+        final List<Target> targets = testdataFactory.createTargets(targetCount, "target" + prefix,
+                prefix.concat(SPACE_AND_DESCRIPTION));
+        targetFilterQueryManagement.create(
+                entityFactory.targetFilterQuery().create().name("filter" + prefix).query("id==target" + prefix + "*")
+                        .autoAssignDistributionSet(distributionSet).autoAssignActionType(actionType));
+
+        return targets;
+    }
+
+    @Step
+    private void verifyThatTargetsHaveAssignmentActionType(final ActionType actionType, final List<Target> targets) {
+        final List<Action> actions = targets.stream()
+                .map(Target::getControllerId)
+                .flatMap(controllerId -> deploymentManagement.findActionsByTarget(controllerId, PAGE).getContent().stream())
+                .toList();
+
+        assertThat(actions).hasSize(targets.size());
+        assertThat(actions).allMatch(action -> action.getActionType().equals(actionType));
+    }
+
+    private Slice<Action> findActionsByDistributionSet(final Pageable pageable, final long distributionSetId) {
+        return actionRepository
+                .findAll(ActionSpecifications.byDistributionSetId(distributionSetId), pageable)
+                .map(Action.class::cast);
     }
 }
